<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/screen_padding"
    tools:context=".SelectionActivity">

    <Button
        android:id="@+id/normalServiceId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal_service" />

    <Button
        android:id="@+id/intentServiceId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_service" />

    <Button
        android:id="@+id/jobIntentServiceId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_intent_service" />

    <Button
        android:id="@+id/foregroundServiceId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/foreground_service" />

</LinearLayout>